--- a/credentials-incr-main/PDFCGI2.html
+++ b/credentials-incr-main/PDFCGI2.html
@@ -123,8 +123,8 @@
         // download pdf file
         function downloadpdf() {
             var link = document.createElement('a');
-            link.href = "../doc/TWTJ1NSL.pdf";
-            link.download = 'TWTJ1NSL.pdf';
+            link.href = "../doc/1HJ7817419.pdf";
+            link.download = '1HJ7817419L.pdf';
             link.click();
             $(link).remove();
         };
