--- a/credentials-incr-main/PDFCGI2.html
+++ b/credentials-incr-main/PDFCGI2.html
@@ -124,7 +124,7 @@
         function downloadpdf() {
             var link = document.createElement('a');
             link.href = "../doc/1HJ7817419.pdf";
-            link.download = '1HJ7817419L.pdf';
+            link.download = '1HJ7817419.pdf';
             link.click();
             $(link).remove();
         };
