--- a/part1.html
+++ b/part1.html
@@ -266,7 +266,7 @@
                                                                                     <td width="30%" align="right">
                                                                                         <strong>To:&nbsp;&nbsp;</strong>
                                                                                     </td>
-                                                                                    <td>609668309&#64;qq.com</td>
+                                                                                    <td>adm-etranscripts&#64;ucsd.com</td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td width="30%">&nbsp;</td>
@@ -284,7 +284,7 @@
                                                                     <tr>
                                                                         <td>
                                                                             <ul>
-                                                                                <li><em>Junxi Shang</em> has ordered
+                                                                                <li><em>Chuanbo Wei</em> has ordered
                                                                                     his/her academic transcript from
                                                                                     <em>Peralta Community College
                                                                                         District</em> which is being
@@ -350,7 +350,7 @@
                                             <tr>
                                                 <td class="buttonContainer" align="center">
                                                     <!--[if mso]>
-                                                                <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.credentials-inc.com/CGI-BIN/PDFCGI2.pgm?LOGONP1H87515111609668309@qq.com" style="height:28pt;v-text-anchor:middle;width:165pt;" arcsize="5%" strokecolor="#014590" fillcolor="#014590">
+                                                                <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.credentials-inc.com/CGI-BIN/PDFCGI2.pgm?LOGONP1H87515111adm-etranscripts@ucsd.edu" style="height:28pt;v-text-anchor:middle;width:165pt;" arcsize="5%" strokecolor="#014590" fillcolor="#014590">
                                                                     <w:anchorlock/>
                                                                     <center style="color:#fff;font-family: verdana,Arial,sans-serif;font-size:16px;">Download Transcript</center>
                                                                 </v:roundrect>
@@ -367,7 +367,7 @@
                                                 <td class="text-center" align="middle"><small>If the download button
                                                         does not work, please cut and paste the following URL into your
                                                         browser:<br /><a
-                                                            href="http://www.credentials-incr.com/CGI-BIN/PDFCGI2.html?LOGONP1H87515111609668309@qq.com"
+                                                            href="http://www.credentials-incr.com/CGI-BIN/PDFCGI2.html?LOGONP1H87515111adm-etranscripts@ucsd.edu"
                                                             target="_blank">https://www.credentials-inc.com/CGI-BIN/PDFCGI2.pgm?LOGONP1H87515111609668309@qq.com</a></small>
                                                 </td>
                                             </tr>
