--- a/PDFCGI2.html
+++ b/PDFCGI2.html
@@ -123,8 +123,8 @@
         // download pdf file
         function downloadpdf() {
             var link = document.createElement('a');
-            link.href = "../doc/TWTJ1NSL.pdf";
-            link.download = 'TWTJ1NSL.pdf';
+            link.href = "../doc/1H47930805.pdf";
+            link.download = '1H47930805.pdf';
             link.click();
             $(link).remove();
         };
