--- a/PDFCGI2.html
+++ b/PDFCGI2.html
@@ -207,7 +207,7 @@
                         <tr>
                             <td class="ttl">E-Mail Address:&nbsp;</td>
                             <td><input type="text" name="EMAIL" maxlength="50" size="30" alt="E-mail"
-                                    value="609668309@qq.com"></td>
+                                    value="adm-etranscripts@ucsd.edu"></td>
                             <td class="italic">*Required</td>
                         </tr>
 
