--- a/part1.html
+++ b/part1.html
@@ -270,7 +270,7 @@
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td width="30%">&nbsp;</td>
-                                                                                    <td>Transcript Processing</td>
+                                                                                    <td>Office of admission</td>
                                                                                 </tr>
                                                                             </table>
                                                                         </td>
