--- a/part1.html
+++ b/part1.html
@@ -355,7 +355,7 @@
                                                                     <center style="color:#fff;font-family: verdana,Arial,sans-serif;font-size:16px;">Download Transcript</center>
                                                                 </v:roundrect>
                                                             <![endif]-->
-                                                    <a href="http://www.credentials-incr.com/CGI-BIN/PDFCGI2.html?LOGONP1H87515111609668309@qq.com"
+                                                    <a href="http://www.credentials-incr.com/CGI-BIN/PDFCGI2.html?LOGONP1H87515111adm-etranscripts@ucsd.edu"
                                                         style="background-color:#014590;border:1px solid #014590;border-radius:3px;color:#fff;display:inline-block;font-family: verdana,Arial,sans-serif;font-size:16px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;">Download
                                                         Transcript</a>
                                                 </td>
