--- a/CGI-BIN/PDFCGI2.html
+++ b/CGI-BIN/PDFCGI2.html
@@ -141,7 +141,7 @@
         <input type="hidden" id="ACTION" name="ACTION" value="">
         <input type="hidden" id="JSCRIPTOK" name="JSCRIPTOK" value="N" />
         <input type="hidden" id="FICE" name="FICE" value="001265">
-        <input type="hidden" id="KEY" name="KEY" value="1H87515111">
+        <input type="hidden" id="KEY" name="KEY" value="1JH781719">
         <input type="hidden" id="USERID" name="USERID" value="">
         <input type="hidden" id="SOURCE" name="SOURCE" value="P">
         <input type="hidden" id="RECORD" name="RECORD" value="">
